# bazel-tutorial

./: BUILD.bazel  WORKSPACE  concat.kt  hello.kt  hello_test.sh
